# fsdc-calories

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  app.py  charts.py  docker-compose.yml  fastapi.Dockerfile  fetch_timeseries_data.py  flask.Dockerfile  flask_app.py  generate_hts_macronutrients_data.py  generate_plate_data.py  hts_processor.py  install_selenium.sh  latest_hts.csv  main.py  process_energy_data.py  process_fiscal_data.py  process_hts_data.py  process_plate_data.py  process_price_data.py  pyproject.toml  requirements.txt  schedule_b_reference.xlsx  scraper.py  update_data.py
data/: schedule_b_reference.xlsx
data/jp_gdp_data/: fiscal.pkl
data/macronutrients/: hts_with_macronutrient_data.csv  net_macronutrients.csv
data/plate/: nutrient_distribution_yearly.json
hts_backups/: 2024-06-25_14-41-50.csv
nginx/: nginx.Dockerfile  nginx.conf
nginx/conf.d/: nginx.conf
notebooks/: graphs.qmd  hts_process.ipynb  imports.qmd  scratch.ipynb
nutrition_data/: nutrient_distribution_yearly.json
routes/: routes.py
src/: __init__.py  charts.py  data_process.py  flask_app.py  fsdc_processor.py  process_plate_data.py  process_price_data.py
src/fsdc_calories/: __init__.py
src/utils/: constants.py  converter_utils.py
supervisor/: fastapi.supervisor.conf  noip.supervisor.conf
templates/: charts.html  energy_chart.html  fiscal_chart.html  index.html  macronutrient_chart.html  my_plate.html  product_prices.html
utils/: converter_utils.py
