[project]
name = "fsdc-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chardet>=5.2.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "requests>=2.32.3",
]
