[project]
name = "fsdc-calories"
version = "0.7.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Alejandro Ouslan", email = "alejandro.ouslan@upr.edu" }]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fsdc-calories = "fsdc_calories:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.6.0",
    "pynvim>=0.5.2",
]
